<resources>
    <string name="app_name">Talk2Friends</string>
    <string name="next_page_button">Continue</string>
    <string name="signup_button">Switch to Sign-Up</string>
    <string name="login">Login</string>
    <string name="signup">Sign-Up</string>
    <string name="verifyEmail">Verify Email</string>
    <string name="emailVerified">Email Verified</string>
    <string name="login_button">Switch to Login</string>
    <string name="friends_page_button">Friends</string>
    <string name="profile_page_button">Profile</string>
    <string name="meetings_page_button">Meetings</string>
    <string name="current_name">Andy</string>
    <string name="current_bday">January</string>
    <string name="current_aff">Alumni</string>
    <string name="current_prof">International</string>
    <string name="inputEmail">USC Email</string>
    <string name="inputPwd">Password</string>
    <string name="cancel">Cancel</string>
    <string name="invEmail">Invalid Email</string>
    <string name="invPwd">Password must contain at least 6 characters</string>
    <string name="invLogin">Invalid Login</string>
    <string name="invNewAccount">Account already exists.</string>
    <string name="sendingEmail">Sending Email...</string>
...
