...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMeetingsPage"
            android:text="Meetings"/>

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFriendsPage"
            android:text="Friends"/>


...
