<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsActivity">

    <TextView
        android:id="@+id/pageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friends Page"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/friendsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friends"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/requestsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friend Requests"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/recommendLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recommended Friends"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <TextView
        android:id="@+id/inviteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invite Friend:"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />


    <ScrollView
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/friendsLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="50dp"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/friendsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:gravity="top" />

    </ScrollView>



    <ScrollView
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/requestsLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="50dp"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/requestsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:gravity="top" />

    </ScrollView>


    <ScrollView
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/recommendLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="50dp"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/recTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:gravity="top" />

    </ScrollView>


    <Button
        android:id="@+id/profilePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:onClick="onClickProfilePage"
        android:text="@string/profile_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/meetingPageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageLabel"
        app:layout_constraintVertical_bias="0.966" />

    <Button
        android:id="@+id/meetingPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="onClickMeetingsPage"
        android:text="@string/meetings_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/friendsPageButton"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toEndOf="@id/profilePageButton" />

    <Button
        android:id="@+id/friendsPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:onClick="onClickFriendsPage"
        android:text="@string/friends_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/meetingPageButton"
        app:layout_constraintTop_toBottomOf="@id/pageLabel"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/inviteFriendEmail"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="576dp"
        android:gravity="center"
        android:hint="Enter USC Email"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/inviteLabel"
        app:layout_constraintEnd_toStartOf="@+id/sendInviteButton"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        android:layout_marginBottom="110dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendInviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:onClick="onClickInviteButton"
        android:text="Send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/meetingPageButton"
        app:layout_constraintTop_toBottomOf="@id/pageLabel"
        app:layout_constraintVertical_bias="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>